<resources>
    <string name="app_name">Shoea</string>
    <string name="logo">Logo</string>
    <string name="get_the_nbest_shoes">Get The\nBest Shoes</string>
    <string name="finding_genuine_shoes_njust_got_easy">Finding genuine shoes\njust got easy</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_or_creat_a_new_account">Sign-in or Creat a new account</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="or">or</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="password">Password: -</string>
    <string name="e_mail">E-mail: -</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_shoea">Welcome to Shoea</string>
    <string name="welcomephotos">WelcomePhotos</string>
    <string name="msg_info_1">We provied high quality products just for you</string>
    <string name="msg_info_2">Your satisfaction is our number one priority</string>
    <string name="msg_info_3">Let\'s fulfill your fashion needs with Shoea right now!</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_mesg">The Shoea App is your source for daily guidance and inspiration to get you closer to your sport and style goals. Shop the latest Shoea and Jordan products, clothing and shoes while getting real-time advice from our team of experts. Receive member rewards and discover fresh stories every day from the top Shoea athletes and coaches.\n\n*Press Next to navigate to Shoea List :) </string>
    <string name="logout">Logout</string>
    <string name="addshoe">AddShoe</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="company_name">Company Name</string>
    <string name="description">Description</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
    <string name="description2">Description:</string>
</resources>