<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ViewGroup of the Layout (ConstraintLayout) to handle the positions of each ViewChild to fit different screen size  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".StartActivity">

        <!-- TextView to Show the app name  -->
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ImageView to Show the app logo  -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@id/tvIntro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAppName"
            app:srcCompat="@drawable/shoes_design_logo" />

        <!-- TextView to Show app advertising quote -->
        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevan"
            android:letterSpacing="0.125"
            android:text="@string/get_the_nbest_shoes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/tvIntro2"
            app:layout_constraintEnd_toEndOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="@id/ivLogo"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <!-- TextView to Show app advertising quote2 -->
        <TextView
            android:id="@+id/tvIntro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/finding_genuine_shoes_njust_got_easy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="@id/ivLogo"
            app:layout_constraintTop_toBottomOf="@id/tvIntro" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>